# peptalk-core

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
core/: CMakeLists.txt
core/include/: common.h  common.hpp  counting.hpp  counting_in_file.hpp  profiling.hpp  profiling_in_file.hpp  timing.hpp
core/src/: common.cpp  counting.cpp  counting_in_file.cpp  profiling.cpp  profiling_in_file.cpp  timing.cpp
io/: CMakeLists.txt
io/src/: PEPWriter.cpp
test/: CMakeLists.txt  counting.cpp  profiling.cpp
